log
Thu, Mar 20, 2025  6:56:21 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  7:23:19 PM: 
 exercises.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:24: error: implicit declaration of function 'size' [-Wimplicit-function-declaration]
   62 |    for (int i = 0; i < size(L); i++) {
      |                        ^~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
Compilation failed
cde75c2
Thu, Mar 20, 2025  7:30:09 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:24: error: implicit declaration of function 'size' [-Wimplicit-function-declaration]
   62 |    for (int i = 0; i < size(L); i++) {
      |                        ^~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
Compilation failed
9ed09bd
Thu, Mar 20, 2025  7:30:23 PM: 
 exercises.c | 82 -------------------------------------------------------------
 1 file changed, 82 deletions(-)
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Wimplicit-function-declaration]
  100 |     int suma2 = sumaLista(L);
      |                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos'; did you mean 'test_elimina_elemento'? [-Wimplicit-function-declaration]
  132 |     eliminaElementos(L, elem);
      |     ^~~~~~~~~~~~~~~~
      |     test_elimina_elemento
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila'; did you mean 'test_copia_pila'? [-Wimplicit-function-declaration]
  175 |     copia_pila(P1, P2);
      |     ^~~~~~~~~~
      |     test_copia_pila
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados'; did you mean 'test_parentesis_balanceados'? [-Wimplicit-function-declaration]
  217 |     if(!parentesisBalanceados(s)){
      |         ^~~~~~~~~~~~~~~~~~~~~
      |         test_parentesis_balanceados
Compilation failed
8306286
Thu, Mar 20, 2025  7:46:10 PM: 
 exercises.c | 82 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 82 insertions(+)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:22: error: comparison between pointer and integer [-Werror]
   62 |    for (int i = 0; i < (L); i++) {
      |                      ^
exercises.c: In function 'eliminaElementos':
exercises.c:80:24: error: implicit declaration of function 'size' [-Wimplicit-function-declaration]
   80 |    for (int i = 0; i < size(L); i++) {
      |                        ^~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f6b742
Thu, Mar 20, 2025  7:46:13 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
Compilation failed
aa718e7
Thu, Mar 20, 2025  8:40:09 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:15: error: 'dato' undeclared (first use in this function)
  122 |          if ((dato = pop(P)) == NULL) {
      |               ^~~~
exercises.c:122:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
997a2ed
Thu, Mar 20, 2025  8:40:26 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 30/70
5be287c
Thu, Mar 20, 2025  8:43:16 PM: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
93cf09c
Thu, Mar 20, 2025  8:43:59 PM: 
 exercises.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:123:16: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  123 |            if (isEmpty(P)) {
      |                ^~~~~~~
exercises.c:124:16: error: implicit declaration of function 'destroy_stack' [-Wimplicit-function-declaration]
  124 |                destroy_stack(P);
      |                ^~~~~~~~~~~~~
Compilation failed
bc4c46d
Thu, Mar 20, 2025  8:45:14 PM: 
 exercises.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|0
196a839
Thu, Mar 20, 2025  8:52:09 PM: 
 exercises.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  0|0
0ffe89c
Thu, Mar 20, 2025  9:19:07 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1322bf0
Sat, Mar 22, 2025  6:01:25 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:133:50: error: expected ')' before 'return'
  133 |                (*dato == '{' && cadena[i] != '}')
      |                                                  ^
      |                                                  )
  134 |                return 0;
      |                ~~~~~~                             
exercises.c:131:15: note: to match this '('
  131 |            if ((*dato == '(' && cadena[i] != ')') ||
      |               ^
exercises.c:135:8: error: expected expression before '}' token
  135 |        }
      |        ^
Compilation failed
5a6a422
Sat, Mar 22, 2025  6:02:53 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4c63dc7
Sat, Mar 22, 2025  6:09:49 PM: 
 exercises.c | 33 +++++++++++++++++----------------
 1 file changed, 17 insertions(+), 16 deletions(-)
 tests:  0|0
853562f
